Added max length of user input.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="footer">
                 <form action="">
-                    <input id="m" autocomplete="off" placeholder="Enter a message!"/>
+                    <input id="m" autocomplete="off" placeholder="Enter a message!" maxlength="1000"/>
                 </form>
             </div>
                 
